@@ -1,3 +1,6 @@
+2006/08/24 niteria
+- Fixed Bug 1543877: Wrong Auto-Complete with \figure
+
 2006/08/20 niteria
 - Fixed Bug 1420318: Find whole words does not work properly
 - Fixed Bug 1345980 (duplicate): 6.31 find whole word with 1...2 letters
